2001-11-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* shimbun/sb-vinelinux.el: Changed the coding system of this file
	to iso-2022-7bit.

	* w3m.el (emacs-w3m-version): Incremted to 1.2.1rc1.

	* w3m-xmas.el (top): Define `w3m-current-title' to avoid
	byte-compile warnings.
	(format-buffers-tab-line): Cleanup.

2001-11-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-xmas.el (format-buffers-tab-line): Don't use the value of
	`w3m-current-title' if it is nil.

2001-11-07  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-exec-filter): Modify regexp pattern of "Wrong
	username or passwd".

2001-11-06  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (emacs-w3m-version): Release 1.2.
	(top): Protect against the error occurs when `w3m-ucs.el' isn't
	found.

2001-11-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* shimbun/sb-asahi.el (shimbun-get-headers): Skip top article.

2001-11-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-index-url, shimbun-get-headers):
	Use the top page of each group instead of GROUP/update/list.html.

2001-11-03  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-copy-buffer): Added argument `empty'.
	(w3m-goto-url-new-session): Call `w3m-copy-buffer' with argument
	`empty' non-nil; If new url has `name' portion, goto the base url
	first.
	(w3m-view-this-url): Likewise.

2001-11-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* Makefile.in (DOCS): Add `FAQ'.

2001-11-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m-form.el (w3m-form-parse-forms): Decode value of input tag.
	(w3m-form-replace): Use `w3m-get-text-property-around'.

	* w3m.el (w3m-parse-attributes): Add :decode-entity attribute.
	(w3m-decode-entities-string): New function.

2001-11-02  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-copy-buffer): Call `w3m-goto-url' instead of copying
	buffer content.

2001-11-02  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-reload-this-page): Change the semantic of the prefix